fix issue with mods and plugins